# HLASOVY_SQL_AGENT_YERDNA

./: README.md  apka_flow_analysis.md  database.db  pyproject.toml  requirements.txt
.chainlit/: config.toml
.chainlit/translations/: sk.json
.files/6a9a7a92-bb1b-42cf-b72a-5823e94688da/: c4cf2b24-6cfa-442e-934a-7dfcf950f197.json
.files/b2d03c75-4a36-40b5-a5c1-4e04f5b35330/: 979c4000-32ed-4a76-a0da-2dbafbe989ac.json
apka/: chainlit.md  main.py
apka/custom_nastroje/: __init__.py  browser.py  chart.py  database.py  databaza.py  email.py  graf.py  image.py  linkedin.py  python_file.py  search.py  stock.py
apka/helpers/: vytvor_databazu.py  vytvor_velku_db.py  vzorove_data.py
apka/models/: sql_models.py
apka/output/: conversation_log.jsonl
apka/rec/: api.py  client.py  event_handler.py
apka/settings/: databaza.py  popis_schemy.yaml  slovne_instrukcie.txt  zakladne_instrukcie.txt
apka/utils/: schema_helper.py
apka/widgets/: LLM_modely.py  spolocne.py
bot_yerdna.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
